# ad-hoc-parse-tables

./: Cargo.toml
src/: main.rs  parse.rs
src/data/: ata.rs  document_type.rs  field.rs  index.rs  mod.rs  number_volume.rs  page.rs  range.rs
