[package]
name = "parse-tables"
version = "0.1.0"
authors = ["Gabriel Araújo <gabriel_araujo@mopa.tv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xml-rs = "0.8.4"
chrono = "0.4.19"
regex = "1"
lazy_static = "1.4.0"
never = "0.1.0"
zip = { version = " 0.5.13", default-features = false, features = ["deflate"] }
